origem no filtro dos documentos

--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -2567,7 +2567,7 @@ function atualizarLabelNotaFiscalTransacao() {
     let textoLabel = 'Anexar Nota Fiscal';
 
     if (tipoTransacao === 'Despesa') {
-        textoLabel = 'Anexar Nota Fiscal de Despesa';
+        textoLabel = 'Anexar Nota Fiscal de Despesa ou recibo de rateio assinado';
     } else if (tipoTransacao === 'Receita') {
         textoLabel = 'Anexar Nota Fiscal de Receita';
     }
